# flask-datadog-monitor

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  requirements.txt  setup.cfg  setup.py
client-server/: bootstrap.py
client-server/apis/: base_api.py
client-server/templates/: index.html
flask_datadog/: README.md
flask_datadog/generator/: README.md  datadog_monitor.py  datadog_monitor_generator.py  datadog_monitor_generator_test.py  endpoint_util.py  flask_endpoint.py  flask_endpoint_parser.py  main.py  main_generator_logic.py  tf_generator.py  tf_spec_generator.py
flask_datadog/monitor/: README.md  __init__.py  route_tagger.py
flask_datadog/scripts/: README.md  cmd_line.py
flask_datadog/shared/: README.md  ddog_constants.py  route_constants.py  route_tagger_constants.py
flask_datadog/templates/: README.md  datadog_monitor.tmpl
monitor-generator/: flask_endpoint_parser.py  monitor_generator.py  setup.cfg
monitor-generator/generator/: datadog_monitor.py  datadog_monitor_generator.py  endpoint_util.py  flask_endpoint.py  flask_endpoint_parser.py  main.py  tf_spec_generator.py
monitor-generator/monitor_tag/: tagger.py
monitor-generator/templates/: datadog_monitor.tmpl
terraform/: terraform.tfstate  terraform.tfstate.backup
terraform/auto-gen-monitors/: provider.tf  test.tf
test-app/: Dockerfile  app.py  requirements.txt
test-app/apis/: README.md  base_api.py
test/app/: Dockerfile  README.md  docker-compose.yml  fake_client.py  requirements.txt
test/app/apis/: base_api.py
test/app/fake_client/: fake_client.py  fake_client_script.sh
test/integration/: README.md  integration_test_app.py  tf_output_generation_test.py
test/integration/expected_output/: README.md  (+9 more)
test/terraform/: .terraform.lock.hcl  README.md  main.tf
(+3 files in other folders)
