[metadata]
# replace with your username:
name = flask_datadog
version = 0.0.1
author = John Wang
author_email = jue@alumni.cmu.edu
description = Tool for auto generating DataDog Monitors from flask endpoints
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = flask_datadog, flask_datadog.monitor
python_requires = >=3.6, <4

