[metadata]
# replace with your username:
name = flask-datadog
version = 0.0.1
author = John Wang
author_email = jue@alumni.cmu.edu
description = Tool for auto generating DataDog Monitors from flask endpoints
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = flask_datadog, flask_datadog.monitor
python_requires = >=3.6, <4
install_requires =
    flask>=1.1.2,<=1.1.4
    Jinja2==2.11.3
    jsonschema==3.2.0
    mypy==0.812

