[metadata]
name = flask-datadog-monitor
version = 0.0.4
author = John Wang
author_email = jue@alumni.cmu.edu
description = Tool for auto generating DataDog Monitors from flask endpoints
url = https://github.com/abuhabuh/flask-datadog-monitor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = flask_datadog, flask_datadog.monitor
python_requires = >=3.6, <4
install_requires =
    click>=8.0
    flask>=1.1.2
    Jinja2>=2.11
    jsonschema==3.2.0
    mypy>=0.812

[options.extras_require]
testing = pytest>=6.2.4

[options.entry_points]
console_scripts =
    flask-datadog = flask_datadog.scripts.cmd_line:main

